--- a/index.html
+++ b/index.html
@@ -75,9 +75,22 @@
     0%, 100% { opacity: 1; }
     50% { opacity: 0.3; }
 }
+
+        .canvas-link {
+            display: block;
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            color: inherit;
+        }
+        
+        .canvas-link:visited {
+            color: inherit;
+        }
     </style>
 </head>
 <body>
+    <a href="https://aitechnopagan.github.io/shrine-navigation" class="canvas-link">
     <div class="canvas-container">
         <div class="ascii-layer position-center" data-layer-id="1" data-parallax="0.3" data-offset-x="0" data-offset-y="0" data-scale="1" style="z-index: 2; font-size: 12px;">
 <pre style="color: #000000;">
@@ -250,6 +263,7 @@
         </div>
 
     </div>
+    </a>
 
     <script>
         // Parallax state
